# GFoil

./: .gitignore  CLAUDE.md  CMakeLists.txt  input.json  setup.py
GFoil/: __init__.py  gfoil.py  inputs.py
gradfoil/: __init__.py  gradfoil.py  inputs.py
include/: ADfuncs.hpp  WPSmodels.hpp  build_global_sys.hpp  calc_ue_m.hpp  clear_RV.hpp  coupled.hpp  data_structs.hpp  extract_BL_TE.hpp  get_funcs.hpp  init_BL.hpp  main_func.hpp  newAmiet.hpp  newton_residuals.hpp  real_type.hpp  residuals.hpp  solve_glob.hpp  sound.hpp  sparselinsolve.hpp  stagmove.hpp  update_state.hpp  update_transition.hpp  vector_ops.hpp
python/: gfoil_bindings.cpp
src/: WPSmodels.cpp  build_global_sys.cpp  build_wake.cpp  calc_ue_m.cpp  clear_RV.cpp  coupled.cpp  extract_BL_TE.cpp  get_cl.cpp  get_funcs.cpp  gfoil_ad_bindings.cpp  gfoil_fwd_bindings.cpp  init_BL.cpp  initialise_thermo_vars.cpp  inviscid_solve_codi.cpp  main.cpp  newAmiet.cpp  panel_funcs.cpp  rebuild_ue_m.cpp  residuals.cpp  run_forward.cpp  solve_glob.cpp  sound.cpp  stagmove.cpp  stagpoint_find.cpp  update_state.cpp  update_transition.cpp
src/include/: WPSmodels.hpp  calc_ue_m.hpp  data_structs.h  data_structs_shared.hpp  extract_BL_TE.hpp  get_funcs.h  get_funcs.hpp  gfoil_ad_impl.h  linSolveMatrix.hpp  linsolveInv.hpp  main_func.h  newAmiet.hpp  panel_funcs.h  panel_funcs.hpp  real_type.h  residuals.h  residuals_shared.hpp  restart_state.h  run_forward.h  solve_inv.hpp  solver_funcs.hpp  sound.hpp  sparselinsolve.hpp  spline.hpp  vector_ops.hpp
src/noise_includes/: amiet.h
srcAD/: main.cpp
srcAD/include/: ADfuncs.hpp  WPSmodels.hpp  calc_ue_m.hpp  data_structs.hpp  extract_BL_TE.hpp  get_funcs.hpp  main_func.hpp  newAmiet.hpp  panel_funcs.hpp  panel_funcs_foil.hpp  real_type.hpp  residuals.hpp  solve_inv.hpp  sound.hpp  spline.hpp  vector_ops.hpp
tests/: README.md  regression_test.py  run_regression.sh
tests/golden/: ad_gradients.json  ad_scalars.json  fwd_scalars.json
